# iree_tokenizers

./: .gitignore  .iex.exs  .tool-versions  AGENTS.md  LICENSE  README.md  mix.exs
.github/scripts/: file_parity_issues.py
.github/workflows/: benchmark.yml  ci.yml  parity-monitor.yml  release.yml
bench/: .formatter.exs  README.md  compare.exs  fetch_trending_models.exs  gpt2_graphs.exs  longbench_batch_compare.exs  longbench_compare.exs  mix.exs  model_matrix_graphs.exs  sentencepiece_compare.exs  validate_parity.exs
bench/config/: config.exs
bench/longbench/: parity_assert.py  parity_check.py  parity_diff.py  parity_iree_dump.exs  plot.py  plot_batch.py  run_fastokens.py  run_fastokens_batch.py
bench/results/: model_matrix.md  sentencepiece_compare.md  summary.md  tokenizers_compare.md
docs/: UPSTREAM_BUGS.md
lib/iree/: tokenizers.ex
native/iree_tokenizers_native/: Cargo.toml  build.rs
native/iree_tokenizers_native/sources/: base_sources.txt  tokenizer_sources.txt
native/iree_tokenizers_native/src/: error.rs  ffi.rs  lib.rs  sentencepiece.rs  stream.rs  tokenizer.rs
scripts/: update_iree_bundle.sh
skills/: README.md
skills/iree-tokenizers-benchmarking/: SKILL.md
skills/iree-tokenizers-parity/: SKILL.md
skills/iree-tokenizers-vendor-refresh/: SKILL.md
test/fixtures/: bpe_unk_token_not_in_vocab.json  bpe_word_cache_overlap.json  bytelevel_utf8_split.json  lookahead_pre_tokenizer_minimal.json  minimal_unigram.json  minimal_wordpiece.json  minimal_wordpiece_batch_longest_padded.json  minimal_wordpiece_left_truncation.json  (+3 more)
(+174 files in other folders)
