[package]
name = "iree_tokenizers_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "iree_tokenizers_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
rustler = "0.37.3"
sentencepiece-model = "0.1.4"
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
cc = "1"
